--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -2323,9 +2323,7 @@ a.more-link{
 .view-display-id-oshnews_list{
 	font-size: 16px;
 	.field-type-image{
-		img{
-			border: 1px solid grey;
-		}
+		border: 1px solid grey;
 	}
 	.views-row-odd{
 		background-color: @color-primary;
@@ -2448,10 +2446,7 @@ a.more-link{
 		float: left;
 		margin-right: 30px;
 		margin-bottom: 20px;
-		//width: 100%;
-		img{
-			border: 1px solid grey;
-		}
+		border: 1px solid grey;
 	}
 	.group-content-wrapper.news-field-group{
 		overflow: hidden;
@@ -6941,3 +6936,20 @@ header.hide-header{
 	}
 }
 
+.page-certificates{
+	h1{
+		display: none;
+	}
+	.breadcrumb {
+  		display: none;
+	}
+} 
+
+.iframe-certificate {
+  width: 100%;
+  height: 580px;
+  padding-top: 2em;
+  padding-left: 2em;
+  padding-right: 2em;
+  border: none;
+}
