--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -27,10 +27,21 @@
 	}
 }
 
+.node-news{
+	.field-name-field-image{
+		border: 0;
+	}
+
+} 
+
+.view-display-id-oshnews_list{
+	.field-type-image {
+    	border: 0;
+	}
+}
+
 blockquote.image-field-caption {
-    p{
-		max-width: 430px;
-    }
+	position: relative;
 }
 
 .oira-tools-search-page{
