--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -781,30 +781,6 @@ a.more-link{
 						margin: 0 auto;
 					}
 				}
-				/*
-				.views-field-field-link{
-					position: absolute;
-					//width: 1140px;
-					top: 45%;
-					left: 10%;
-					font-family: @font-family-base-2;
-					font-weight: 300;
-					margin-right: 10%;
-					a{
-						color: @color-white;
-						font-size: 1.2em;
-					}
-				}
-				.views-field-body{
-					position: absolute;
-					//width: 1140px;
-					top: 66%;
-					left: 10%;
-					color: @color-white;
-					margin-right: 10%;
-					font-size: @font-size1-3;
-				}
-				*/
 			}
 			.owl-controls.clickable{
 				position: absolute;
@@ -6942,4 +6918,26 @@ header.hide-header{
   padding-left: 2em;
   padding-right: 2em;
   border: none;
+}
+
+
+body.front{
+	#block-system-main{
+		.panels-flexible-row-new-9{
+	 		.view-display-id-attachment_1{
+ 				padding-bottom: 25px;
+			}
+		}
+	}
+	.panels-flexible-row-new-16 {
+		.pane-promotional-materials {
+			.view-promotional-materials {
+				.views-item-columns-container{
+					blockquote.image-field-caption{
+						position: relative;
+					}
+				}
+			}
+		}
+	}
 }
