--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -7545,32 +7545,6 @@ a.more-link:before {
 #block-system-main .panels-flexible-region-new-slider {
   margin-top: 35px;
 }
-#block-system-main .panels-flexible-region-new-slider .view-id-slideshow .owl-wrapper {
-  /*
-				.views-field-field-link{
-					position: absolute;
-					//width: 1140px;
-					top: 45%;
-					left: 10%;
-					font-family: @font-family-base-2;
-					font-weight: 300;
-					margin-right: 10%;
-					a{
-						color: @color-white;
-						font-size: 1.2em;
-					}
-				}
-				.views-field-body{
-					position: absolute;
-					//width: 1140px;
-					top: 66%;
-					left: 10%;
-					color: @color-white;
-					margin-right: 10%;
-					font-size: @font-size1-3;
-				}
-				*/
-}
 #block-system-main .panels-flexible-region-new-slider .view-id-slideshow .owl-wrapper .views-field-field-image {
   position: relative;
   display: inline-block;
@@ -9174,10 +9148,11 @@ a.more-link:before {
   text-decoration: underline !important;
 }
 .node-news .field-name-field-image {
+  position: relative;
   display: inline-block;
   float: left;
   margin-right: 30px;
-  margin-bottom: 20px;
+  margin-bottom: 35px;
   border: 1px solid grey;
 }
 .node-news .group-content-wrapper.news-field-group {
@@ -13326,31 +13301,22 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
 }
 /*end act as a partner modal*/
 blockquote.image-field-caption {
-  color: #FFFF;
-  z-index: 99;
+  position: absolute;
+  color: #000;
+  font-size: 10px;
   border-left: 0;
-  position: relative;
-  padding: 0;
+  padding: 3px 15px 0 0;
   margin: 0;
 }
 blockquote.image-field-caption p {
-  z-index: 999;
-  position: absolute;
-  width: 100%;
-  margin: 0;
   padding: 0;
-  margin-top: -25px;
-  padding-left: 1em;
-  background: rgba(145, 123, 162, 0.85);
-  font-size: 1.1rem;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  margin: 0;
 }
 body.front .view-slideshow blockquote.image-field-caption p,
 .panels-flexible-region-new-image-inside blockquote.image-field-caption p {
-  position: absolute;
+  position: relative;
   bottom: 0;
-  color: #FFF !important;
+  color: #FFF;
   background: transparent;
   opacity: 1;
   z-index: 40;
@@ -13361,6 +13327,7 @@ body.front .view-slideshow blockquote.image-field-caption p,
   padding: 10px 20px;
   margin: 0;
   text-align: right;
+  margin-top: -35px;
 }
 /* Sector hidden - MDR-2548 */
 .country-content-count-sectors .form-group {
@@ -13670,6 +13637,12 @@ header.hide-header {
   padding-left: 2em;
   padding-right: 2em;
   border: none;
+}
+body.front #block-system-main .panels-flexible-row-new-9 .view-display-id-attachment_1 {
+  padding-bottom: 25px;
+}
+body.front .panels-flexible-row-new-16 .pane-promotional-materials .view-promotional-materials .views-item-columns-container blockquote.image-field-caption {
+  position: relative;
 }
 /*FOOTER
 ********************************************/
@@ -15353,8 +15326,14 @@ header.hide-header {
   .page-irat-network .quicktabs-views-group .views-field.views-field-nothing .col-sm-2 img {
     margin: 0;
   }
-  blockquote.image-field-caption p {
-    max-width: 430px;
+  .node-news .field-name-field-image {
+    border: 0;
+  }
+  .view-display-id-oshnews_list .field-type-image {
+    border: 0;
+  }
+  blockquote.image-field-caption {
+    position: relative;
   }
   .oira-tools-search-page .field-name-field-sector-category {
     float: none;
